Increased spacing between form and contact us for smaller widths, attempted to fix unusual mobile device portrait font size changes

--- a/css/main.css
+++ b/css/main.css
@@ -30,6 +30,7 @@ html, body {
 	background-size: 1280px 800px;
     background-repeat: no-repeat;
 	z-index: 1;
+	-webkit-text-size-adjust: 100%;
 }
 
 .container a {
